fix wrong accent down symbol by no word wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -296,6 +296,8 @@ html {
 }
 .accent {
   position: relative;
+  white-space: nowrap;
+  z-index: -1;
 }
 .accent:after {
   content: "";
