--- a/src/styl/_japan.styl
+++ b/src/styl/_japan.styl
@@ -13,6 +13,8 @@
 
 .accent
   position relative
+  white-space nowrap
+  z-index -1
 
   &:after
     content ""
